# web_ex_14

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  seeds.py  settings.py  types.py
app/mail/: __init__.py  confirmation_email.py  main.py
app/migrations/: env.py
app/migrations/versions/: 2474985ee86d_init.py  2f6bf9de4d43_add_confirmed.py
contacts/: controllers.py  models.py  routes.py  schemas.py  seeds.py
docs/source/: conf.py  index.rst
tests/: __init__.py  conftest.py
tests/contacts/: test_route_contacts.py  test_unit_contacts_controllers.py
tests/users/: test_unit_controllers.py  test_unit_users_controllers.py
users/: auth.py  controllers.py  models.py  routes.py  schemas.py  seeds.py
